Changes between 2.3.5 and 2.4.DEV
-----------------------------------

- make "import pdb ; pdb.set_trace()" work natively wrt capturing (no "-s" needed
  anymore), making ``pytest.set_trace()`` a mere shortcut.

- fix issue181: --pdb now also works on collect errors (and 
  on internal errors) .  This was implemented by a slight internal 
  refactoring and the introduction of a new hook 
  ``pytest_exception_interact`` hook (see below).

- fix issue341: introduce new experimental hook for IDEs/terminals to 
  intercept debugging: ``pytest_exception_interact(node, call, report)``.

- PR27: correctly handle nose.SkipTest during collection.  Thanks
  Antonio Cuni, Ronny Pfannschmidt.

- new monkeypatch.replace() to avoid imports and provide a shorter
  invocation for patching out classes/functions from modules:

     monkeypatch.replace("requests.get", myfunc

  will replace the "get" function of the "requests" module with ``myfunc``.
  
- fix issue322: tearDownClass is not run if setUpClass failed. Thanks
  Mathieu Agopian for the initial fix.  Also make all of pytest/nose finalizer 
  mimick the same generic behaviour: if a setupX exists and fails, 
  don't run teardownX.  This also introduces a new method "node.addfinalizer()"
  helper which can only be called during the setup phase of a node.

- fix issue336: autouse fixture in plugins should work again.

- change to use hyphen-separated long options but keep the old spelling
  backward compatible.  py.test -h will only show the hyphenated version,
  for example "--collect-only" but "--collectonly" will remain valid as well
  (for backward-compat reasons).  Many thanks to Anthon van der Neut for
  the implementation and to Hynek Schlawack for pushing us.

- fix issue279: improve object comparisons on assertion failure
  for standard datatypes and recognise collections.abc.  Thanks to
  Brianna Laugher and Mathieu Agopian.

- fix issue317: assertion rewriter support for the is_package method
